+messages:  получение информации о пользователе в заголовке
